# pyhead

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
app/: __init__.py  head.json
app/static/: example.js
app/templates/: extends.html  index.html
archive/: tags.py
favicons/: favicon.html
pyhead/: __init__.py  _cli.py  _helpers.py  exceptions.py  tags.py
pyhead/presets/: __init__.py  charset.py  favicon.py  google.py  verification.py
pyhead/tags/: link_tag.py
requirements/: dev.txt  main.txt
src/pyhead/: __init__.py  _base.py  _cli.py  _helpers.py
src/pyhead/class_presets/: geo_position.py  open_graph_website.py  stylesheet.py  twitter_card.py
src/pyhead/django/: __init__.py
src/pyhead/django/templatetags/: pyhead.py
src/pyhead/elements/: __init__.py  application_name.py  base.py  charset.py  content_security_policy.py  description.py  favicon.py  format_detection.py  geo_position.py  google.py  keywords.py  link.py  meta.py  open_graph_website.py  page.py  rating.py  referrer_policy.py  robots.py  script.py  social_media_card.py  stylesheet.py  subject.py  theme_color.py  title.py  twitter_card.py  verification.py  viewport.py
src/pyhead/flask/: __init__.py
src/pyhead/presets/: __init__.py  charset.py  favicon.py  geo_position.py  google.py  keywords.py  open_graph_website.py  stylesheet.py  twitter_card.py  verification.py
src/pyhead/protocols/: __init__.py
src/pyhead/tags/: __init__.py  base_tag.py  link_tag.py  meta_tag.py  script_tag.py  title_tag.py
tests/: test_django.py  test_elements.py  test_flask.py  test_head.py
