[project]
name = "pyhead"
authors = [{ name = "David Carmichael", email = "david@uilix.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
dynamic = ["version", "description"]

dependencies = [
    "MarkupSafe >= 2.1.3",
    "click >= 8.1.7",
]

[project.scripts]
pyhead = "pyhead._cli:cli"

[project.urls]
Home = "https://github.com/CheeseCake87/pyhead"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.mypy]
python_version = "3.9"
files = ["src/pyhead"]
show_error_codes = true
pretty = true
strict = true

[tool.pyright]
pythonVersion = "3.9"
include = ["src/pyhead"]
typeCheckingMode = "basic"

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"